--- a/OMM.html
+++ b/OMM.html
@@ -33,7 +33,7 @@
 <LI><a href=“”>Muscle Energy</a>
 <LI><a href=“”>HVLA</a>
 <LI><a href=“”>Articulatory Techniques</a>
-<LI><a href=“file:///Users/main/Desktop/COMLEX%20bootstrap/OMM/Special_tests.html”>Special Tests</a>
+<LI><a href=“Special_tests.html”>Special Tests</a>
 <LI><a href=“”>Common Techniques for Visceral and Systemic dysfunction</a>
 <LI><a href=“”>Neurologic Exam</a>
 
